fix: image size was overflowing on blog posts

--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -55,6 +55,7 @@
   font-weight: 300;
   padding: 5px;
   max-width: 768px;
+  overflow: hidden;
 
   p {
     font-family: $font-family-base;
